@@ -14,7 +14,6 @@ CAT
 +  **Event**	   用来记录一件事发生的次数，比如记录系统异常，它和transaction相比缺少了时间的统计，开销比transaction要小。
 +  **Heartbeat**	表示程序内定期产生的统计信息, 如CPU%, MEM%, 连接池状态, 系统负载等。
 +  **Metric**	  用于记录业务指标、指标可能包含对一个指标记录次数、记录平均值、记录总和，业务指标最低统计粒度为1分钟。
-+  **Trace**     用于记录基本的trace信息，类似于log4j的info信息，这些信息仅用于查看一些相关信息
 
 消息树
 ===
@@ -35,87 +34,6 @@ CAT监控系统将每次URL、Service的请求内部执行情况都封装为一�
 ![Alt text](https://raw.github.com/dianping/cat/master/cat-home/src/main/webapp/images/logviewAll03.png)
 
 
-Requirements
----------------------
-* Linux 2.6以及之上（2.6内核才可以支持epoll），Mac以及Windows环境可以作为开发环境
-* Java  6，7，8
-* Maven 3.2.3+
-* MySQL 5.6
-
-
-我司的环境配置如下
-
-```
-Distributor ID:	CentOS
-Description:	CentOS release 6.5 (Final)
-Release:	6.5
-Codename:	Final
-
-Server version: Apache Tomcat/8.0.30
-Server built:   Dec 1 2015 22:30:46 UTC
-Server number:  8.0.30.0
-OS Name:        Linux
-OS Version:     2.6.32-431.el6.x86_64
-Architecture:   amd64
-JVM Version:    1.8.0_111-b14
-JVM Vendor:     Oracle Corporation
-
-Maven 3.3.3
-
-Mysql 5.6
-
-tomcat  7.0.70  建议使用此版本，修改中文乱码 tomcat conf 目录下 server.xml
-           <Connector port="8080" protocol="HTTP/1.1"
-               URIEncoding="utf-8"    connectionTimeout="20000"
-                redirectPort="8443" />  增加  URIEncoding="utf-8"
-
-```
-
-
-Quick Started
----------------------
-####  1、将分支mvn-repo下的jar包复制到本机maven仓库，cat一些依赖的jar存放于mvn-repo分支
- ```
-  1、git clone https://github.com/dianping/cat.git
-  2、cd cat
-  3、git checkout mvn-repo
-  4、cp -R * ~/.m2/repository
-  5、git checkout master
-  6、mvn clean install -DskipTests
- ```
-如果下载有问题，可以尝试翻墙后下载
-
-##### 2、在CAT目录下，用maven构建项目
-        mvn clean install -DskipTests
-        
-##### 3、配置CAT的运行需要配置信息
-	mvn cat:install
-Note：
-* Linux\Mac  需要对/data/appdatas/cat和/data/applogs/cat有读写权限
-* Windows    则是对系统运行盘下的/data/appdatas/cat和/data/applogs/cat有读写权限,如果cat服务运行在e盘的tomcat中，则需要对e:/data/appdatas/cat和e:/data/applogs/cat有读写权限
-* 
-        此步骤是自动配置一些cat启动需要的基本数据库配置以及配置文件，如果发现此步骤有问题，可以直接使用第五步，手工方式安装。
-
-##### 4、(Optional)如果安装了hadoop集群，需到/data/appdatas/cat/server.xml中配置对应hadoop信息。将localmode设置为false，默认情况下，CAT在开发模式（localmode=true）下工作。推荐大部分公司使用单机模式，不需要搭建hdfs，部署cat的服务端使用一个大磁盘的机器，比如1TB，这样可以省去很多事情。
-
-================如果上述自动化程序出现问题，可以使用如下部署进行尝试，这步骤其实就是上述自动化程序做的事情==========================
-
-##### 5、启动的cat单机版本基本步骤
-* 检查下/data/appdatas/cat/ 下面需要的需要的配置文件，配置文件在源码script，请修改对应的datasources.xml 以及 client.xml 里面对应的IP、PSW部分。注意cat服务端的数据上报端口是2280，cat的http端口默认是tomcat的端口8080。
-* 修改server.xml 部分，注意修改server.xml 里面的remote-servers的端口设定，如果是tomcat，一般是8080。
-* 建立一个mysql的数据库，数据库的安装文件在script文件下的Cat.sql，可以导入到数据库中。
-* 在cat目录下执行 mvn install -DskipTests 
-* cat-home打包出来的war包，重新命名为cat.war, 并放入tomcat的webapps
-* 启动tomcat
-* 访问 http://localhost:8080/cat/r
-* 具体详细的还可以参考，这里面的步骤更加傻瓜一些， http://unidal.org/cat/r/home?op=view&docName=deploy   
-
-##### 6、导入eclipse发现找不到类
-* 请先执行mvn eclipse:eclipse 会自动生成相关的类文件
-* 作为普通项目导入eclipse，不要用作为maven项目导入eclipse
-
-##### 7、可以参考script目录下详细资料
-
 
 Copyright and license
 ---------------------
@@ -134,3 +52,274 @@ CAT接入公司
 
 
 更多接入公司，欢迎在<https://github.com/dianping/cat/issues/753>登记
+
+
+================================================================================================
+
+
+# Quick Start
+
+## CAT安装环境
+
+* Linux 2.6以及之上（2.6内核才可以支持epoll），线上服务端部署请使用Linux环境，Mac以及Windows环境可以作为开发环境，美团点评内部CentOS 6.5
+* Java  6，7，8，服务端推荐是用jdk7的版本，客户端jdk6、7、8都支持
+* Maven 3.3.3
+* MySQL 5.6，5.7，更高版本MySQL都不建议使用，不清楚兼容性
+* J2EE容器建议使用tomcat，建议版本7.0.70
+* Hadoop环境可选，一般建议规模较小的公司直接使用磁盘模式，可以申请CAT服务端，500GB磁盘或者更大磁盘，这个磁盘挂载在/data/目录上
+
+
+
+### 这里以安装的三台CAT服务端集群为例子，IP比如为10.1.1.1，10.1.1.2，10.1.1.3。
+
+
+## 1、tomcat启动参数调整，修改 catalina.sh文件【服务端】
+
+###需要每台CAT集群10.1.1.1，10.1.1.2，10.1.1.3都进行部署
+###建议使用cms gc策略,建议cat的使用堆大小至少10G以上，开发环境启动2G即可
+
+CATALINA_OPTS="$CATALINA_OPTS -server -Djava.awt.headless=true -Xms25G -Xmx25G -XX:PermSize=256m -XX:MaxPermSize=256m -XX:NewSize=10144m -XX:MaxNewSize=10144m -XX:SurvivorRatio=10 -XX:+UseParNewGC -XX:ParallelGCThreads=4 -XX:MaxTenuringThreshold=13 -XX:+UseConcMarkSweepGC -XX:+DisableExplicitGC -XX:+UseCMSInitiatingOccupancyOnly -XX:+ScavengeBeforeFullGC -XX:+UseCMSCompactAtFullCollection -XX:+CMSParallelRemarkEnabled -XX:CMSFullGCsBeforeCompaction=9 -XX:CMSInitiatingOccupancyFraction=60 -XX:+CMSClassUnloadingEnabled -XX:SoftRefLRUPolicyMSPerMB=0 -XX:-ReduceInitialCardMarks -XX:+CMSPermGenSweepingEnabled -XX:CMSInitiatingPermOccupancyFraction=70 -XX:+ExplicitGCInvokesConcurrent -Djava.nio.channels.spi.SelectorProvider=sun.nio.ch.EPollSelectorProvider -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djava.util.logging.config.file="%CATALINA_HOME%\conf\logging.properties" -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationConcurrentTime -XX:+PrintHeapAtGC -Xloggc:/data/applogs/heap_trace.txt -XX:-HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/data/applogs/HeapDumpOnOutOfMemoryError -Djava.util.Arrays.useLegacyMergeSort=true"
+
+
+###修改中文乱码 tomcat conf 目录下 server.xml
+```
+<Connector port="8080" protocol="HTTP/1.1"
+           URIEncoding="utf-8"    connectionTimeout="20000"
+               redirectPort="8443" />  增加  URIEncoding="utf-8"
+                            
+```
+
+##2、程序对于/data/目录具体读写权限【包括客户端&服务端】
+
+- 注意无论是CAT客户端和服务端都要求/data/目录能进行读写操作，如果/data/目录不能写，建议使用linux的软链接链接到一个固定可写的目录，软链接的基本命令请自行搜索google
+- 此目录会存一些CAT必要的配置文件，运行时候的缓存文件，建议不要修改，如果想改，请自行研究好源码里面的东西，在酌情修改，此目录不支持进行配置化
+- mkdir /data
+- chmod 777 /data/ -R
+
+- 如果是Windows开发环境则是对程序运行盘下的/data/appdatas/cat和/data/applogs/cat有读写权限,如果cat服务运行在e盘的tomcat中，则需要对e:/data/appdatas/cat和e:/data/applogs/cat有读写权限
+- 如果windows实在不知道哪个盘，就所有盘都建好，最后看哪个盘多文件，就知道哪个了
+
+
+
+##3、配置/data/appdatas/cat/client.xml【包括客户端&服务端】
+
+-	此配置文件的作用是所有的客户端都需要一个地址指向CAT的服务端，比如CAT服务端有三个IP，10.1.1.1，10.1.1.2，10.1.1.3，2280是默认的CAT服务端接受数据的端口，不允许修改，http-port是Tomcat启动的端口，默认是8080，建议使用默认端口。
+-	此文件可以通过运维统一进行部署和维护，比如使用puppert等运维工具。
+-	不同环境这份文件不一样，比如区分prod环境以及test环境，在美团点评内部一共是2套环境的CAT，一份是生产环境，一份是测试环境
+
+	
+```   
+<?xml version="1.0" encoding="utf-8"?>
+<config mode="client">
+	    	<servers>
+	                <server ip="10.1.1.1" port="2280" http-port="8080"/>
+	                <server ip="10.1.1.2" port="2280" http-port="8080"/>
+	                <server ip="10.1.1.3" port="2280" http-port="8080"/>
+	    	</servers>
+</config>
+```
+
+##4、安装CAT的数据库【一个CAT集群公用一个数据库】
+
+- 数据库的脚本文件 script/Cat.sql 
+- MySQL的一个系统参数：max_allowed_packet，其默认值为1048576(1M)，修改为1000M，修改完需要重启mysql
+- 注意：如果是不同环境的cat，比如说生产一套，测试一套cat，数据库也需要生产一套，测试一套。
+
+##5、配置/data/appdatas/cat/datasources.xml【服务端配置】
+###需要每台CAT集群10.1.1.1，10.1.1.2，10.1.1.3都进行部署
+
+注意：此xml仅仅为模板，请根据自己实际的情况替换jdbc.url,jdbc.user,jdbc.password的实际值。
+app数据库和cat数据配置为一样，app库不起作用，为了运行时候代码不报错。
+
+```
+<?xml version="1.0" encoding="utf-8"?>
+
+<data-sources>
+	<data-source id="cat">
+		<maximum-pool-size>3</maximum-pool-size>
+		<connection-timeout>1s</connection-timeout>
+		<idle-timeout>10m</idle-timeout>
+		<statement-cache-size>1000</statement-cache-size>
+		<properties>
+			<driver>com.mysql.jdbc.Driver</driver>
+			<url><![CDATA[${jdbc.url}]]></url>
+			<user>${jdbc.user}</user>
+			<password>${jdbc.password}</password>
+			<connectionProperties><![CDATA[useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&socketTimeout=120000]]></connectionProperties>
+		</properties>
+	</data-source>
+	<data-source id="app">
+		<maximum-pool-size>3</maximum-pool-size>
+		<connection-timeout>1s</connection-timeout>
+		<idle-timeout>10m</idle-timeout>
+		<statement-cache-size>1000</statement-cache-size>
+		<properties>
+			<driver>com.mysql.jdbc.Driver</driver>
+			<url><![CDATA[${jdbc.url}]]></url>
+			<user>${jdbc.user}</user>
+			<password>${jdbc.password}</password>
+			<connectionProperties><![CDATA[useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&socketTimeout=120000]]></connectionProperties>
+		</properties>
+	</data-source>
+</data-sources>
+
+```
+
+###6、配置/data/appdatas/cat/server.xml【服务端】
+###需要每台CAT集群10.1.1.1，10.1.1.2，10.1.1.3都进行部署
+
+CAT节点一共有四个职责
+
+	1.控制台 - 提供给业务人员进行数据查看【默认所有的cat节点都可以作为控制台，不可配置】
+	2.消费机 - 实时接收业务数据，实时处理，提供实时分析报表【默认所有的cat节点都可以作为消费机，不可配置】
+	3.告警端 - 启动告警线程，进行规则匹配，发送告警（目前仅支持单点部署）【可以配置】
+	4.任务机 - 做一些离线的任务，合并天、周、月等报表 【可以配置】
+
+线上做多集群部署，比如说10.1.1.1，10.1.1.2，10.1.1.3这三台机器
+
+	1.建议选取一台10.1.1.1 负责角色有控制台、告警端、任务机，建议配置域名访问CAT，就配置一台机器10.1.1.1一台机器挂在域名下面
+	2.10.1.1.2，10.1.1.3 负责消费机处理，这样能做到有效隔离，任务机、告警等问题不影响实时数据处理
+
+
+默认script下的server.xml为
+
+```
+<?xml version="1.0" encoding="utf-8"?>
+<config local-mode="false" hdfs-machine="false" job-machine="true" alert-machine="false">
+	<storage  local-base-dir="/data/appdatas/cat/bucket/" max-hdfs-storage-time="15" local-report-storage-time="7" local-logivew-storage-time="7">
+		<hdfs id="logview" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="logview"/>
+		<hdfs id="dump" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="dump"/>
+		<hdfs id="remote" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="remote"/>
+	</storage>
+	<console default-domain="Cat" show-cat-domain="true">
+		<remote-servers>127.0.0.1:8080</remote-servers>
+	</console>
+</config>
+```
+
+ 配置说明：
+  * local-mode : 建议在开发环境以及生产环境时，都设置为false
+  * hdfs-machine : 定义是否启用HDFS存储方式，默认为 false
+  * job-machine : 定义当前服务是否为报告工作机（开启生成汇总报告和统计报告的任务，只需要一台服务机开启此功能），默认为 false
+  * alert-machine : 定义当前服务是否为报警机（开启各类报警监听，只需要一台服务机开启此功能），默认为 false；
+  * storage : 定义数据存储配置信息
+  * local-report-storage-time :  定义本地报告文件存放时长，单位为（天）
+  * local-logivew-storage-time : 定义本地日志文件存放时长，单位为（天）
+  * local-base-dir : 定义本地数据存储目录，建议直接使用/data/appdatas/cat/bucket目录
+  * hdfs : 定义HDFS配置信息
+  * server-uri : 定义HDFS服务地址
+  * console : 定义服务控制台信息
+  * remote-servers : 定义HTTP服务列表，（远程监听端同步更新服务端信息即取此值）
+  * ldap : 定义LDAP配置信息（这个可以忽略）
+  * ldapUrl : 定义LDAP服务地址（这个可以忽略）
+  
+
+按照如上的说明，10.1.1.1 机器/data/appdatas/cat/serverm.xml配置，注意hdfs配置就随便下了一个，请忽略
+
+
+```
+<?xml version="1.0" encoding="utf-8"?>
+<config local-mode="false" hdfs-machine="false" job-machine="true" alert-machine="true">
+	<storage  local-base-dir="/data/appdatas/cat/bucket/" max-hdfs-storage-time="15" local-report-storage-time="7" local-logivew-storage-time="7">
+	<hdfs id="logview" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="logview"/>
+		<hdfs id="dump" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="dump"/>
+		<hdfs id="remote" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="remote"/>
+	</storage>
+	<console default-domain="Cat" show-cat-domain="true">
+		<remote-servers>10.1.1.1:8080,10.1.1.2:8080,10.1.1.3:8080</remote-servers>
+	</console>
+</config>
+```
+
+10.1.1.2，10.1.1.3 机器/data/appdatas/cat/serverm.xml配置如下，仅仅job-machine&alert-machine修改为false
+
+
+```
+<?xml version="1.0" encoding="utf-8"?>
+<config local-mode="false" hdfs-machine="false" job-machine="false" alert-machine="false">
+	<storage  local-base-dir="/data/appdatas/cat/bucket/" max-hdfs-storage-time="15" local-report-storage-time="7" local-logivew-storage-time="7">
+	<hdfs id="logview" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="logview"/>
+		<hdfs id="dump" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="dump"/>
+		<hdfs id="remote" max-size="128M" server-uri="hdfs://10.1.77.86/user/cat" base-dir="remote"/>
+	</storage>
+	<console default-domain="Cat" show-cat-domain="true">
+		<remote-servers>10.1.1.1:8080,10.1.1.2:8080,10.1.1.3:8080</remote-servers>
+	</console>
+</config>
+```
+
+
+##6、war打包
+	1.在cat的源码目录，执行mvn install -DskipTests
+    2.将cat-home子模块打的war包，重命名为cat.war，放入tomcat的webapp目录里面，注意此步骤仅仅操作10.1.1.1 一台机器
+    3.如下是个人本机电脑的测试，下载的jar来自于repo1.maven.org 以及 unidal.org
+    4.如果发现cat的war打包不通过，CAT所需要依赖的jar都部署在http://unidal.org/nexus/上，可以配置这个公有云的仓库地址到本地的settings路径，理论上不需要配置即可，可以参考cat的pom.xml配置   
+    
+
+```
+Downloading: http://repo1.maven.org/maven2/org/codehaus/plexus/plexus-utils/3.0.24/plexus-utils-3.0.24.jar
+Downloaded: http://repo1.maven.org/maven2/org/apache/commons/commons-email/1.1/commons-email-1.1.jar (30 KB at 9.8 KB/sec)
+Downloaded: http://repo1.maven.org/maven2/javax/servlet/jstl/1.2/jstl-1.2.jar (405 KB at 107.7 KB/sec)
+Downloaded: http://repo1.maven.org/maven2/com/google/code/javaparser/javaparser/1.0.8/javaparser-1.0.8.jar (235 KB at 55.4 KB/sec)
+Downloaded: http://repo1.maven.org/maven2/org/codehaus/plexus/plexus-utils/3.0.24/plexus-utils-3.0.24.jar (242 KB at 46.9 KB/sec)
+Downloaded: http://repo1.maven.org/maven2/org/freemarker/freemarker/2.3.9/freemarker-2.3.9.jar (789 KB at 113.3 KB/sec)
+Downloading: http://unidal.org/nexus/content/repositories/releases/org/unidal/webres/WebResServer/1.2.1/WebResServer-1.2.1.jar
+Downloading: http://unidal.org/nexus/content/repositories/releases/org/unidal/webres/WebResTagLibrary/1.2.1/WebResTagLibrary-1.2.1.jar
+Downloading: http://unidal.org/nexus/content/repositories/releases/org/unidal/webres/WebResTag/1.2.1/WebResTag-1.2.1.jar
+Downloading: http://unidal.org/nexus/content/repositories/releases/org/unidal/webres/WebResRuntime/1.2.1/WebResRuntime-1.2.1.jar
+Downloading: http://unidal.org/nexus/content/repositories/releases/org/unidal/webres/WebResApi/1.2.1/WebResApi-1.2.1.jar
+Downloaded: http://unidal.org/nexus/content/repositories/releases/org/unidal/webres/WebResApi/1.2.1/WebResApi-1.2.1.jar (21 KB at 82.7 KB/sec)
+Downloading: http://unidal.org/nexus/content/repositories/releases/org/unidal/webres/WebResBase/1.2.1/WebResBase-1.2.1.jar
+
+```
+
+
+	```
+    [INFO] parent ............................................. SUCCESS [ 40.478 s]
+	[INFO] cat-client ......................................... SUCCESS [03:47 min]
+	[INFO] cat-core ........................................... SUCCESS [ 31.740 s]
+	[INFO] cat-hadoop ......................................... SUCCESS [02:50 min]
+	[INFO] cat-consumer ....................................... SUCCESS [  3.197 s]
+	[INFO] cat-home ........................................... SUCCESS [ 58.964 s]
+	[INFO] ------------------------------------------------------------------------
+	[INFO] BUILD SUCCESS
+    ``` 
+    
+##7、war部署
+    1.将cat.war部署到10.1.1.1的tomcat的webapps下，启动tomcat
+    2.打开控制台的URL，http://10.1.1.1:8080/cat/s/config?op=routerConfigUpdate，需要替换为自己实际的IP链接
+    3.修改路由配置为如下，当为如下配置时候，10.1.1.1 正常不起消费数据的作用，仅当10.1.1.2以及10.1.1.3都挂掉才会进行实时流量消费
+
+```
+<?xml version="1.0" encoding="utf-8"?>
+<router-config backup-server="10.1.1.1" backup-server-port="2280">
+   <default-server id="10.1.1.2" weight="1.0" port="2280" enable="true"/>
+   <default-server id="10.1.1.3" weight="1.0" port="2280" enable="true"/>
+</router-config>
+
+```
+    4.重启10.1.1.1的机器的tomcat
+    5.将cat.war部署到10.1.1.2，10.1.1.3这两台机器中，启动tomcat
+    6.cat集群部署完毕，如果有问题，欢迎在微信群咨询，如果文档有误差，欢迎指正以及提交pullrequest
+
+
+
+========================================================================
+
+##8、开发环境CAT的部署
+
+### 1.请按照如上部署/data/环境目录，数据库配置client.xml ,datasources.xml,server.xml这三个配置文件，注意server.xml里面的节点角色，job-machine&alert-machine都可以配置为true
+### 2.在cat目录中执行 mvn eclipse:eclipse，此步骤会生成一些代码文件，直接导入到工程会发现找不到类
+### 3.将源码以普通项目到入eclipse中，注意不要以maven项目导入工程
+### 4.运行com.dianping.cat.TestServer 这个类，即可启动cat服务器
+
+
+##9.客户端的集成
+参考 http://unidal.org/cat/r/home?op=view&docName=integration，这个在自己搭建的cat首页上也有此文档
+
+
+
+
+
+
+
